libkmfl (0.9.11)

  * fix bug when nomatch is used with "use" keyword 

 -- Doug Rintoul <doug_rintoul@sil.org>  Mon, 08 Nov 2010 09:39:31 -0800

libkmfl (0.9.10)

  * fix support for differentiating between right and left ctrl, alt, and shift states when matching "any" statements

 -- Doug Rintoul <doug_rintoul@sil.org>  Wed, 03 Nov 2010 14:25:45 -0700

libkmfl (0.9.9)

  * change handling of escape character

 -- Doug Rintoul <doug_rintoul@sil.org>  Mon, 19 Jul 2010 15:37:32 -0700

libkmfl (0.9.8)

  * add support for the notany key.
  * Keyman version 7 support

 -- Doug Rintoul <doug_rintoul@sil.org>  Mon, 26 Jan 2009 15:59:54 -0800

libkmfl (0.9.7)

  * Commit a complete string in one go instead of a single character at a time

 -- Doug Rintoul <doug_rintoul@sil.org>  Thu, 16 Oct 2008 16:51:57 -0700

libkmfl (0.9.6)

  * add support for get_surrounding_text to provide context sensitive input
    methods
  * add the ability to reload keyboards on the fly

 -- Doug Rintoul <doug_rintoul@sil.org>  Tue,  7 Nov 2006 15:08:24 -0800

libkmfl (0.9.5-1) 

  * Fix deadkeys in "any" statement problem
  * Fix problem when a mixture of backspaces interspersed with characters
    was output when processing a single keystroke

 -- Doug Rintoul <doug_rintoulsil.org>  Fri, 15 Sep 2006 11:10:00 -0700

libkmfl (0.9.4-1) 

  * Use UTF conversion routines in kmflcomp rather than a local copy

 -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 -0700


libkmfl (0.9.2-1)

  * Replace UTF Conversion library with a GPLed implementation
  * fix any/index bug

 -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 -0800

libkmfl (0.9.1-1)

  * further fix for the shift key problem
  * AMD64 fixes

 -- Doug Rintoul <doug_rintoulsil.org>  Wed, 12 Oct 2005 09:45:00 -0800

0.9             30-Aug-2005
				Fix shift key problem
0.8             4-Jul-2005
				Add full support for virtual keys.
0.7             2-Jun-2005